[gd_scene load_steps=10 format=2]

[ext_resource path="res://Pantalles/Pantalla1/Pantalla1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Flag/VictoryFlag.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pantalles/Pantalla1/Fons/Fons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Brick/Brick.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pantalles/Pantalla1/Limits/Limit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Dino/Personatge.tscn" type="PackedScene" id=6]
[ext_resource path="res://Pantalles/Pantalla1/Limits/Limit2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Area.tscn" type="PackedScene" id=8]
[ext_resource path="res://Area2.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" parent="." instance=ExtResource( 3 )]
margin_left = 18.0
margin_top = -897.0
margin_right = 1366.0
margin_bottom = 750.0
expand = true
stretch_mode = 0

[node name="StaticBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 26, 504 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 4 )]
position = Vector2( 74, 504 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D4" parent="." instance=ExtResource( 4 )]
position = Vector2( 324, 443 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D12" parent="." instance=ExtResource( 4 )]
position = Vector2( 535, 330 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D11" parent="." instance=ExtResource( 4 )]
position = Vector2( 893, 427 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D13" parent="." instance=ExtResource( 4 )]
position = Vector2( 406, -709 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D14" parent="." instance=ExtResource( 4 )]
position = Vector2( 1142, 358 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D15" parent="." instance=ExtResource( 4 )]
position = Vector2( 223, 8.99999 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D16" parent="." instance=ExtResource( 4 )]
position = Vector2( 462, -83 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D17" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 9 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D18" parent="." instance=ExtResource( 4 )]
position = Vector2( 481, 82 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D19" parent="." instance=ExtResource( 4 )]
position = Vector2( 716, 152 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D20" parent="." instance=ExtResource( 4 )]
position = Vector2( 925, 257 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D22" parent="." instance=ExtResource( 4 )]
position = Vector2( 1218, -123 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D23" parent="." instance=ExtResource( 4 )]
position = Vector2( 1170, -123 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D24" parent="." instance=ExtResource( 4 )]
position = Vector2( 1290, -233 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D25" parent="." instance=ExtResource( 4 )]
position = Vector2( 425, -552 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D26" parent="." instance=ExtResource( 4 )]
position = Vector2( 1077, -318 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D27" parent="." instance=ExtResource( 4 )]
position = Vector2( 590, -438 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D28" parent="." instance=ExtResource( 4 )]
position = Vector2( 156, -602 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D29" parent="." instance=ExtResource( 4 )]
position = Vector2( 833, -388 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D30" parent="." instance=ExtResource( 4 )]
position = Vector2( 940, -183 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D45" parent="." instance=ExtResource( 4 )]
position = Vector2( 697, -132 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D46" parent="." instance=ExtResource( 4 )]
position = Vector2( 204, -602 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D47" parent="." instance=ExtResource( 4 )]
position = Vector2( 854, -692 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D48" parent="." instance=ExtResource( 4 )]
position = Vector2( 806, -692 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D49" parent="." instance=ExtResource( 4 )]
position = Vector2( 758, -692 )
scale = Vector2( 0.15, 0.15 )

[node name="StaticBody2D3" parent="." instance=ExtResource( 7 )]
position = Vector2( -28, -745 )
scale = Vector2( -4.57033, 15.1992 )

[node name="StaticBody2D5" parent="." instance=ExtResource( 7 )]
position = Vector2( 1412, -745 )
scale = Vector2( -4.57033, 15.1992 )

[node name="Area2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( 933, -736 )
scale = Vector2( 2, 2 )

[node name="Area2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 458, 648 )
scale = Vector2( 0.5, 0.5 )

[node name="1" parent="." instance=ExtResource( 8 )]
position = Vector2( 2750, 137 )

[node name="11" parent="." instance=ExtResource( 8 )]
position = Vector2( 4500, -423 )

[node name="2" parent="." instance=ExtResource( 9 )]
position = Vector2( -450, 697 )
rotation = 3.14159

[node name="22" parent="." instance=ExtResource( 9 )]
position = Vector2( -2000, 137 )
rotation = 3.14159

[node name="23" parent="." instance=ExtResource( 9 )]
position = Vector2( -4000, -422 )
rotation = 3.14159

[node name="KinematicBody2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 63, 490 )
scale = Vector2( 3, 3 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="1" to="." method="_on_1_body_entered"]
[connection signal="body_entered" from="11" to="." method="_on_11_body_entered"]
[connection signal="body_entered" from="2" to="." method="_on_2_body_entered"]
[connection signal="body_entered" from="22" to="." method="_on_22_body_entered"]
[connection signal="body_entered" from="23" to="." method="_on_22_body_entered"]
